Update palette in windows as set in high contrast theme

The palette in windows doesn't respect the colors as set in the high
contrast theme. This can lead to an issue as not reflecting the native
theme colors. This patch updates the windows theme palette with the
native high contrast colors.

Fixes: QTBUG-135964
Change-Id: Ic1f6839046cb432fe33b4e79e611b36f542a0737
Reviewed-by: Oliver Eftevaag <oliver.eftevaag@qt.io>
(cherry picked from commit 081062ea5e396d9d251956eee412156f2319b816)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit dba6b5c48211197623a1929fcc7410c955b470fc)
(cherry picked from commit 4fa1e488984f699d877dad76f8ea266beb8e5070)
(cherry picked from commit 9ad6717785e38a6d56ef2d6bae26b90a94ceeb16)